test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_values_types/src/main.sw
library;

// Modules listed in the order of enum variants ;-)
mod test_attr;
mod cfg_attr_experimental;
mod cfg_attr_program_type;
mod cfg_attr_target;
mod deprecated_attr;
mod error_attr;